bug 148213, flush cookies to disk after a remove-all-cookies, r=pinkerton, sr=beard