extensions/cookie/nsCookieManager.cpp
@@ -123,6 +123,7 @@ nsresult nsCookieManager::Init()
 
 NS_IMETHODIMP nsCookieManager::RemoveAll(void) {
   ::COOKIE_RemoveAll();
+  ::COOKIE_Write();
   return NS_OK;
 }
 
